--- a/SuffixTree/SuffixTree.vcxproj
+++ b/SuffixTree/SuffixTree.vcxproj
@@ -154,6 +154,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="common.h" />
     <ClInclude Include="interface.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="SuffixQueryTree.h" />
