--- a/SuffixTree/SuffixTree.vcxproj.filters
+++ b/SuffixTree/SuffixTree.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="interface.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="common.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
