add simple string search

--- a/SuffixTreePyBinding/SuffixTreePyBinding.vcxproj.filters
+++ b/SuffixTreePyBinding/SuffixTreePyBinding.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="pycommons.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="interface_py.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="simple_stringsearch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
